--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,12 +12,9 @@
   background-color: #fff;
   z-index: 10;
 }
-
 .logo h2 {
-  color: #141534;
-  
+  color: #141534; 
 }
-
 .btn-menubar {
   outline: none;
   border: none;
@@ -26,26 +23,21 @@
   background-color: #141534;
   display: flex;
 }
-
 .btn-menubar svg {
   width: 20px;
   height: 20px;
   fill: #fff;
   margin-bottom: 0;
 }
-
 .lg-hidden {
   display: none;
 }
-
 .menu_left {
   position: relative;
   display: flex;
   align-items: center;
   gap: 55px;
-
 }
-
 .btn-contact {
   border: none;
   outline: none;
@@ -53,26 +45,22 @@
   color: #fff;
   background-color: #141534;
 }
-
 .menu-li .menu {
   list-style: none;
   display: flex;
   gap: 30px;
   width: 100%;
 }
-
 .menu-li .menu a {
   text-decoration: none;
   color: inherit;
   font-size: 15px;
 }
-
 .card {
   position: relative;
   margin: 20px 75px;
   isolation: isolate;
 }
-
 .card .bottom {
   position: absolute;
   bottom: 0px;
@@ -82,21 +70,18 @@
   z-index: 1;
   justify-content: space-between;
 }
-
 .card .bottom button {
   border: none;
   padding: 15px 20px;
   color: inherit;
   background-color: #fff;
 }
-
 .card .card-img {
   width: 100%;
   height: 80vh;
   transition: display 2s ease-in;
   z-index: 0;
 }
-
 .card img {
   position: absolute;
   display: none;
@@ -106,12 +91,10 @@
   width: 100%;
   height: 100%;
 }
-
 .card img.active,
 .text-data.active {
   display: block !important;
 }
-
 .text-content {
   position: absolute;
   width: 100%;
@@ -125,12 +108,10 @@
   justify-content: center;
   background-color: #00000075;
 }
-
 .text-content .text-data {
   display: none;
   text-align: center;
 }
-
 .text-content .text-data h1 {
   font-size: 4rem;
   color: #fff;
@@ -250,7 +231,7 @@
   flex-direction: column;
 }
 
-.left-login > h1 { /* Todos h1 dentro da div left-login */
+.left-login > h1 { 
   font-size: 2.5vw;
   color: #77ffc0;
   margin-top: 20px;
@@ -264,23 +245,23 @@
   width: 50vw;
   height: 90vh;
   display: flex;
-  justify-content: center; /* centraliza no eixo x */
+  justify-content: center; 
   align-items: center;
 }
 
 .card-login {
   width: 60%; 
   display: flex;
-  justify-content: center; /* centraliza no eixo x */
+  justify-content: center; 
   align-items: center;
   flex-direction: column;
   padding: 30px 35px; 
   background: #2f2841;
   border-radius: 20px;
-  box-shadow: 0px 10px 40px #00000056; /* 1 valor é o eixo x, 2 valor é eixo y, 3 valor é blur, 4 valor é cor */
+  box-shadow: 0px 10px 40px #00000056;
 }
 
-.card-login > h1 { /* pega todos h1 dentro da div .card-login */
+.card-login > h1 { 
   color: #0f8;
   font-weight: 800;
   margin: 0;
@@ -436,7 +417,6 @@
     table, thead, tbody, th, td, tr { 
       display: block; 
     }
-    
     /* Hide table headers (but not display: none;, for accessibility) */
     thead tr { 
       position: absolute;
@@ -453,7 +433,6 @@
       position: relative;
       padding-left: 50%; 
     }
-  
     td:before { 
       /* Now like a table header */
       position: absolute;
@@ -465,11 +444,8 @@
       white-space: nowrap;
       /* Label the data */
       content: attr(data-column);
-  
       color: #000;
       font-weight: bold;
     }
-  
   }
-  
   /* table css ends here */
