--- a/client/src/App.css
+++ b/client/src/App.css
@@ -449,3 +449,82 @@
     }
   }
   /* table css ends here */
+
+  /* error page csss */
+.errorpagecontainer{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  
+}
+  
+  .sectionError{
+    padding: 4rem 2rem;
+  }
+  
+  .sectionError .error{
+    font-size: 150px;
+    color: #008B62;
+    text-shadow: 
+      1px 1px 1px #00593E,    
+      2px 2px 1px #00593E,
+      3px 3px 1px #00593E,
+      4px 4px 1px #00593E,
+      5px 5px 1px #00593E,
+      6px 6px 1px #00593E,
+      7px 7px 1px #00593E,
+      8px 8px 1px #00593E,
+      25px 25px 8px rgba(0,0,0, 0.2);
+  }
+  
+  .page{
+    margin: 2rem 0;
+    font-size: 20px;
+    font-weight: 600;
+    color: #444;
+  }
+  
+  .back-home{
+    display: inline-block;
+    border: 2px solid #222;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    padding: 0.75rem 1rem 0.6rem;
+    transition: all 0.2s linear;
+    box-shadow: 0 15px 15px -11px rgba(0,0,0, 0.4);
+    background: #222;
+    border-radius: 6px;
+    cursor: pointer;
+  }
+  .back-home:hover{
+    background: #222;
+    color: #ddd;
+  }
+
+  .noloanfound {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 24px;
+    color: #333; 
+    background: linear-gradient(to right, #f0f0f0, #ffffff); 
+    padding: 20px 40px; 
+    border: 2px solid #ccc; 
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-family: Arial, sans-serif;
+  }
+  
+  
+  .noloanfound:hover {
+    background: linear-gradient(to right, #ffffff, #f0f0f0); /* Reverse gradient on hover */
+    cursor: pointer;
+  }
+      
+  
